# app/Http/Controllers/Auth/UserController.php
@@ -10,9 +10,47 @@ class UserController extends Controller
 {
     /**
      * @SWG\Get(
+     *     path="/users",
+     *     summary="Get list of users",
+     *     tags={"Users"},
+     *     @SWG\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         @SWG\Schema(
+     *             type="array",
+     *             @SWG\Items(ref="#/definitions/User")
+     *         ),
+     *     ),
+     *     @SWG\Response(
+     *         response="401",
+     *         description="Unauthorized user",
+     *     ),
+     * )
+     */
+    public function index()
+    {
+        return \response()->json([
+            "description" => "response message",
+            "token" => "token string",
+            "userObject" => [
+                [
+                    "firstName" => "John",
+                    "lastName" => "Lennon",
+                    "age" => 22,
+                    "gender" => "female",
+                    "email" => "lennon@gmail.com"
+                ]
+            ]
+        ], 200);
+    }
+
+
+    /**
+     * @SWG\Post(
      *     path="/create",
      *     description="Return a user's first and last name",
      *     @SWG\Parameter(
+     *         name="firstname",
      *         name="firstname",
      *         in="query",
      *         type="string",
@@ -36,16 +74,55 @@ class UserController extends Controller
      *     )
      * )
      */
-    public function create(Request $request)
+    public function store(Request $request)
     {
-        return true;
-        $userData = $request->only([
-            'firstname',
-            'lastname',
-        ]);
-        if (empty($userData['firstname']) && empty($userData['lastname'])) {
-            return new \Exception('Missing data', 404);
-        }
-        return $userData['firstname'] . ' ' . $userData['lastname'];
+        return response()->json([
+            "description" => "response message",
+            "token" => "token string",
+            "userObject" => []
+        ], 200);
+//        $userData = $request->only([
+//            'firstname',
+//            'lastname',
+//        ]);
+//        if (empty($userData['firstname']) && empty($userData['lastname'])) {
+//            return new \Exception('Missing data', 404);
+//        }
+//        return $userData['firstname'] . ' ' . $userData['lastname'];
     }
+
+
+    /**
+     * @SWG\Get(
+     *     path="/users/{user_id}",
+     *     summary="Get user by id",
+     *     tags={"Users"},
+     *     description="Get user by id",
+     *     @SWG\Parameter(
+     *         name="user_id",
+     *         in="path",
+     *         description="User id",
+     *         required=true,
+     *         type="integer",
+     *     ),
+     *     @SWG\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         @SWG\Schema(ref="#/definitions/User"),
+     *     ),
+     *     @SWG\Response(
+     *         response="401",
+     *         description="Unauthorized user",
+     *     ),
+     *     @SWG\Response(
+     *         response="404",
+     *         description="User is not found",
+     *     )
+     * )
+     */
+    public function show($user_id)
+    {
+
+    }
+
 }
